--- a/2020468_final.ipynb
+++ b/2020468_final.ipynb
@@ -2,140 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8e7c56e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_excel(io=\"data.xlsx\", sheet_name=\"in\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0b84f9d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                Text Language\n",
-      "0  chatgptãéšããåãœããÿï¼ï¼\\næéžä½œãã³ãƒ¼ãƒæããããããã...       ja\n",
-      "1  alexandrovnaing prohibition of chatgpt has bee...       en\n",
-      "2  schaut euch an was fobizz dianaknodel alles âï...       de\n",
-      "3          bow down to chatgpt ðÿ httpstcoentszi2aq9       en\n",
-      "4  profilinde vatan tã¼rkiye falan yazan bireyler...       tr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ph/d5rkl1m93176xgtl24l7gfqr0000gn/T/ipykernel_1331/2691779444.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df['Text'] = df['Text'].str.replace('[^\\w\\s]', '')\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(df, columns=['Text', 'Language'])\n",
-    "\n",
-    "df.dropna()\n",
-    "df['Text'] = df['Text'].str.lower()\n",
-    "df['Text'] = df['Text'].str.replace('[^\\w\\s]', '')\n",
-    "\n",
-    "print(df.head(5))  # print first 5 rows of the dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "abd09e9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "#split the data into train and test set\n",
-    "train,test = train_test_split(df, test_size=0.30, random_state=0)\n",
-    "\n",
-    "#save the data\n",
-    "train.to_csv('train.csv',index=False)\n",
-    "\n",
-    "test.to_csv('test.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "53f160bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                    Text Language\n",
-      "45401  àààà¹àà¹àà¹ààµàààˆàšàà¹àà google à¹ààà²à¹ààµàà...       th\n",
-      "44171  5 times chatgpt steered me wrong in local seo ...       en\n",
-      "9341   yg belum tau chatgpt itu apa chatgpt itu sebua...       in\n",
-      "7929   isnt it cheaper to create your own chatgpt int...       en\n",
-      "46545                      realmeetkevin chatgpt is cool       en\n",
-      "                                                    Text Language\n",
-      "39178  seems like a boss move for an educator fearing...       en\n",
-      "14283  how many of you have still not tried chatgpt y...       en\n",
-      "9945   curious  do you think the integration of chatg...       en\n",
-      "5554     melhor invenãão da atualidade se chama chat gpt       pt\n",
-      "7552                  pabloscare demande ã  chatgpt mdrr       fr\n"
-     ]
-    }
-   ],
-   "source": [
-    "xtrain = pd.read_csv('train.csv')\n",
-    "\n",
-    "print(train.head(5))  # print first 5 rows of the dataframe\n",
-    "\n",
-    "xtest = pd.read_csv('test.csv')\n",
-    "\n",
-    "print(test.head(5))  # print first 5 rows of the dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ea5e77ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train = train['Text']\n",
-    "y_train = train['Text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5aa6085b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bcee90a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "85239cd2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#task1\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv') \n",
+    "\n",
+    "\n",
+    "X = df['Tweet text']  \n",
+    "y = df['Sentiment']  \n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "\n",
+    "rf_model = RandomForestClassifier()\n",
+    "rf_model.fit(X_train_vectorized, y_train)\n",
+    "\n",
+    "\n",
+    "predictions = rf_model.predict(X_test_vectorized)\n",
+    "\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "precision = precision_score(y_test, predictions, average='weighted')\n",
+    "recall = recall_score(y_test, predictions, average='weighted')\n",
+    "f1 = f1_score(y_test, predictions, average='weighted')\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 Score:\", f1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,7 +53,46 @@
    "id": "f56b760a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Task2\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv')  \n",
+    "\n",
+    "\n",
+    "X = df['Tweet text']  \n",
+    "y = df['User ID']  \n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "\n",
+    "rf_model = RandomForestClassifier()\n",
+    "rf_model.fit(X_train_vectorized, y_train)\n",
+    "\n",
+    "\n",
+    "predictions = rf_model.predict(X_test_vectorized)\n",
+    "\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "precision = precision_score(y_test, predictions, average='weighted')\n",
+    "recall = recall_score(y_test, predictions, average='weighted')\n",
+    "f1 = f1_score(y_test, predictions, average='weighted')\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 Score:\", f1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -151,7 +100,48 @@
    "id": "65754a05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#task3\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv')  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "X = df['Tweet text']  \n",
+    "\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_vectorized = vectorizer.fit_transform(X)\n",
+    "\n",
+    "\n",
+    "num_clusters = 5  \n",
+    "kmeans = KMeans(n_clusters=num_clusters)\n",
+    "kmeans.fit(X_vectorized)\n",
+    "\n",
+    "\n",
+    "silhouette_avg = silhouette_score(X_vectorized, kmeans.labels_)\n",
+    "print(\"Silhouette Score:\", silhouette_avg)\n",
+    "\n",
+    "\n",
+    "cluster_labels = kmeans.labels_\n",
+    "\n",
+    "\n",
+    "df['Cluster Label'] = cluster_labels\n",
+    "\n",
+    "\n",
+    "for cluster_label in range(num_clusters):\n",
+    "    cluster_tweets = df[df['Cluster Label'] == cluster_label]['Tweet text']\n",
+    "    print(f\"Cluster {cluster_label}:\")\n",
+    "    for tweet in cluster_tweets:\n",
+    "        print(tweet)\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,7 +149,45 @@
    "id": "8fc05253",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#task4\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv')  \n",
+    "\n",
+    "\n",
+    "X = df[['Tweet text', 'User information', 'Hashtags used']]  \n",
+    "y = df[['Retweet count', 'Favorite count', 'Reply count']]  \n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_text = vectorizer.fit_transform(X_train['Tweet text'])\n",
+    "X_test_text = vectorizer.transform(X_test['Tweet text'])\n",
+    "\n",
+    "\n",
+    "X_train_features = pd.concat([pd.DataFrame(X_train_text.toarray()), X_train[['User information', 'Hashtags used']]], axis=1)\n",
+    "X_test_features = pd.concat([pd.DataFrame(X_test_text.toarray()), X_test[['User information', 'Hashtags used']]], axis=1)\n",
+    "\n",
+    "\n",
+    "rf = RandomForestRegressor()\n",
+    "rf.fit(X_train_features, y_train)\n",
+    "\n",
+    "\n",
+    "y_pred = rf.predict(X_test_features)\n",
+    "\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "print(\"R^2 Score:\", r2)"
+   ]
   },
   {
    "cell_type": "code",
