--- a/2020468_final.ipynb
+++ b/2020468_final.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85239cd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9193080691930807\n",
+      "Precision: 0.914408692425795\n",
+      "Recall: 0.9193080691930807\n",
+      "F1 Score: 0.9086896854521006\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ai-011/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1327: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "#task1\n",
     "import pandas as pd\n",
@@ -18,8 +37,8 @@
     "df = pd.read_csv('dataset.csv') \n",
     "\n",
     "\n",
-    "X = df['Tweet text']  \n",
-    "y = df['Sentiment']  \n",
+    "X = df['Text']  \n",
+    "y = df['Language']  \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -65,8 +84,8 @@
     "df = pd.read_csv('dataset.csv')  \n",
     "\n",
     "\n",
-    "X = df['Tweet text']  \n",
-    "y = df['User ID']  \n",
+    "X = df['Text']  \n",
+    "y = df['Username']  \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -106,6 +125,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
     "\n",
     "df = pd.read_csv('dataset.csv')  \n",
@@ -113,7 +134,7 @@
     "\n",
     "\n",
     "\n",
-    "X = df['Tweet text']  \n",
+    "X = df['Text']  \n",
     "\n",
     "\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -132,11 +153,11 @@
     "cluster_labels = kmeans.labels_\n",
     "\n",
     "\n",
-    "df['Cluster Label'] = cluster_labels\n",
+    "df['Text'] = cluster_labels\n",
     "\n",
     "\n",
     "for cluster_label in range(num_clusters):\n",
-    "    cluster_tweets = df[df['Cluster Label'] == cluster_label]['Tweet text']\n",
+    "    cluster_tweets = df[df['Text'] == cluster_label]['Text']\n",
     "    print(f\"Cluster {cluster_label}:\")\n",
     "    for tweet in cluster_tweets:\n",
     "        print(tweet)\n",
@@ -155,24 +176,25 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "\n",
     "df = pd.read_csv('dataset.csv')  \n",
     "\n",
     "\n",
-    "X = df[['Tweet text', 'User information', 'Hashtags used']]  \n",
-    "y = df[['Retweet count', 'Favorite count', 'Reply count']]  \n",
+    "X = df[['Text', 'Username', 'hashtag']]  \n",
+    "y = df[['RetweetCount', 'LikeCount', 'ReplyCount']]  \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "\n",
     "vectorizer = TfidfVectorizer()\n",
-    "X_train_text = vectorizer.fit_transform(X_train['Tweet text'])\n",
-    "X_test_text = vectorizer.transform(X_test['Tweet text'])\n",
+    "X_train_text = vectorizer.fit_transform(X_train['Text'])\n",
+    "X_test_text = vectorizer.transform(X_test['Text'])\n",
     "\n",
     "\n",
-    "X_train_features = pd.concat([pd.DataFrame(X_train_text.toarray()), X_train[['User information', 'Hashtags used']]], axis=1)\n",
-    "X_test_features = pd.concat([pd.DataFrame(X_test_text.toarray()), X_test[['User information', 'Hashtags used']]], axis=1)\n",
+    "X_train_features = pd.concat([pd.DataFrame(X_train_text.toarray()), X_train[['Username', 'hashtag']]], axis=1)\n",
+    "X_test_features = pd.concat([pd.DataFrame(X_test_text.toarray()), X_test[['Username', 'hashtag']]], axis=1)\n",
     "\n",
     "\n",
     "rf = RandomForestRegressor()\n",
@@ -195,7 +217,47 @@
    "id": "920bb227",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#task5\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('dataset.csv') \n",
+    "\n",
+    "\n",
+    "X = df['Tt']  \n",
+    "y = df['hashtag'] \n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
+    "vectorizer = CountVectorizer(tokenizer=lambda x: x.split())\n",
+    "X_train_hashtags = vectorizer.fit_transform(y_train)\n",
+    "X_test_hashtags = vectorizer.transform(y_test)\n",
+    "\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=5, random_state=42)\n",
+    "kmeans.fit(X_train_hashtags)\n",
+    "\n",
+    "\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(X_train_hashtags, y_train)\n",
+    "\n",
+    "\n",
+    "silhouette_avg = silhouette_score(X_train_hashtags, kmeans.labels_)\n",
+    "print(\"Silhouette Score:\", silhouette_avg)\n",
+    "\n",
+    "\n",
+    "accuracy = nb.score(X_test_hashtags, y_test)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
