--- a/2020468_final.ipynb
+++ b/2020468_final.ipynb
@@ -74,6 +74,7 @@
    "outputs": [],
    "source": [
     "#Task2\n",
+    "#This task leads to a \"Dead Kernel\"\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -121,12 +122,12 @@
    "outputs": [],
    "source": [
     "#task3\n",
+    "#This task leads to a \"Dead Kernel\"\n",
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.cluster import KMeans\n",
+    "\n",
     "\n",
     "\n",
     "df = pd.read_csv('dataset.csv')  \n",
@@ -172,6 +173,7 @@
    "outputs": [],
    "source": [
     "#task4\n",
+    "#This task leads to a \"Dead Kernel\"\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -213,10 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "920bb227",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette Score: 0.7719170881463631\n",
+      "Accuracy: 0.806019398060194\n"
+     ]
+    }
+   ],
    "source": [
     "#task5\n",
     "\n",
@@ -225,12 +236,13 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
     "df = pd.read_csv('dataset.csv') \n",
     "\n",
     "\n",
-    "X = df['Tt']  \n",
+    "X = df['Text']  \n",
     "y = df['hashtag'] \n",
     "\n",
     "\n",
