--- a/2020468_final.ipynb
+++ b/2020468_final.ipynb
@@ -67,6 +67,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b01317c",
+   "metadata": {},
+   "source": [
+    "# 2020468 Syed Ammar Bin farrukh\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f56b760a",
@@ -74,7 +82,7 @@
    "outputs": [],
    "source": [
     "#Task2\n",
-    "#This task leads to a \"Dead Kernel\"\n",
+    "#This task lead to a \"Dead Kernel\"\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -272,28 +280,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04dc128c",
+   "cell_type": "markdown",
+   "id": "84593d83",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee3a15e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b60fb99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 2020468@Syed Ammar Bin farrukh Lab Final CS351"
+   ]
   },
   {
    "cell_type": "code",
